# claude-code-proxy

./: .env.example  .gitignore  ANTHROPIC_LITELLM_FACADE_ARCHITECTURE_V1.1.md  pyproject.toml  start.sh  test_py_architecture.md
anthropic_proxy/: README.md  run.py
anthropic_proxy/app/: main.py
anthropic_proxy/app/api/: models.py
anthropic_proxy/app/api/endpoints/: messages.py  token_counter.py
anthropic_proxy/app/core/: config.py
anthropic_proxy/app/services/: llm_router.py  translation.py
anthropic_proxy/app/utils/: beautiful_log.py  gemini_schema.py
src/: main.py
src/api/: models.py
src/api/endpoints/: messages.py  token_counter.py
src/api/v1/endpoints/: health.py  messages.py
src/api/v1/schemas/: anthropic_api.py
src/clients/: litellm_provider_client.py
src/core/: config.py  logging_config.py  logging_setup.py  opentelemetry_setup.py
src/models/: openai_provider_models.py
src/services/: anthropic_sse_builder_service.py  anthropic_to_openai_translator.py  error_translator_service.py  litellm_client.py  llm_router.py  message_flow_orchestrator.py  model_translator.py  openai_to_anthropic_translator.py  request_translator_service.py  response_translator_service.py  translation.py
src/utils/: beautiful_log.py  tool_parser.py
tests/: run_tests.py
tests/services/: test_translators.py
tests/test_api/: test_messages.py  test_token_counter.py
tests/test_services/: test_llm_router.py  test_translation.py
tests/test_utils/: test_gemini_schema.py  test_tool_parser.py
