[project]
name = "anthropic-proxy"
version = "0.1.0"
description = "Proxy that translates between Anthropic API and LiteLLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "httpx",
    "pydantic",
    "litellm",
    "python-dotenv",
    "pydantic-settings",
    "uvicorn (>=0.34.2,<0.35.0)",
    "black (>=25.1.0,<26.0.0)",
]

[tool.black]
line-length = 100
target-version = ["py310"]
skip-string-normalization = true
skip-magic-trailing-comma = true
preview = true