[project]
name = "anthropic-proxy"
version = "0.1.0"
description = "Proxy that translates between Anthropic API and LiteLLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "httpx",
    "pydantic",
    "litellm",
    "python-dotenv",
    "pydantic-settings",
    "uvicorn (>=0.34.2,<0.35.0)",
    "black (>=25.1.0,<26.0.0)",
    "loguru==0.7.2",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-logging>=0.43b0",
    "opentelemetry-distro>=0.43b0",
    "opentelemetry-instrumentation-httpx>=0.43b0",
]

[tool.black]
line-length = 100
target-version = ["py310"]
skip-string-normalization = true
skip-magic-trailing-comma = true
preview = true

# [tool.poetry.dependencies]
# python = "^3.10"
# fastapi = "^0.104.1"
# uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
# python-dotenv = "^1.0.0"
# loguru = "^0.7.2"
# litellm = "^1.14.13" # Assuming a version for litellm
# pydantic-settings = "^2.1.0"
# opentelemetry-api = "^1.22.0"
# opentelemetry-sdk = "^1.22.0"
# opentelemetry-exporter-otlp-proto-grpc = "^1.22.0"
# opentelemetry-instrumentation-fastapi = "^0.43b0"
# opentelemetry-instrumentation-logging = "^0.43b0"
# opentelemetry-distro = "^0.43b0"
# # Optional: opentelemetry-instrumentation-httpx = "^0.43b0"

[tool.poetry.group.dev.dependencies]