[project]
name = "anthropic-proxy"
version = "0.1.0"
description = "Proxy that translates between Anthropic API and LiteLLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]",
    "httpx",
    "pydantic",
    "litellm[proxy,vertex-ai]",
    "python-dotenv",
    "pydantic-settings",
    "uvicorn",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-logging",
    "opentelemetry-distro",
    "opentelemetry-instrumentation-httpx",
    "google-auth",
    "google-cloud-core",
    "google-auth-oauthlib",
    "ruff (>=0.11.12,<0.12.0)",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]  # pycodestyle, pyflakes, isort
ignore = []

